# runmath

./: .gitignore  .release-please-manifest.json  .releaserc.json  CHANGELOG.md  LICENSE.md  README.md  WARP.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json  settings.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  app.module.css  index.css  main.tsx  main_settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: base.json  settings-page.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/calculator/domain/: Calculator.ts  CalculatorSettings.ts
src/app/calculator/infrastructure/: MathJsCalculator.ts
src/components/: ConsoleInput.tsx  ConsoleResult.tsx  InputPlaceholder.tsx  ResultView.tsx  SubConsoleResult.tsx  console.module.css  settings.tsx
src/components/Settings/: BGColor.tsx  Checkbox.tsx  FormatSelector.tsx  HideOnEnter.tsx  RunOnStart.tsx  UseBigNumbers.tsx  bgcolor.css  index.module.css  index.tsx
src/hooks/: useBackgroundColor.ts  useBiggerScreen.ts  useCalculator.ts  useCopyToClipboardSubscription.ts  useExitOnClose.ts  useGlobalShortcut.ts  useHistory.ts
src/state/: calculator.ts  settings.ts
src/utils/: configureExitOnCloseWindow.ts  configureRunOnStart.ts  configureSettingsListener.ts  configureSettingsStorage.ts  configureShortcuts.ts  createSettingsPage.ts  exitOnCloseMainWindow.ts  getInitialPreferences.ts  initSettingsPage.ts  localStorage.ts  runinput.ts  settingsPageLauncher.ts  settingsStorage.ts  singleInstance.ts  toggleWindowView.ts  updateNotifier.ts
