[package]
name = "runmath"
version = "1.0.0"
description = "Do math, quickly 🚀"
authors = ["David Jiménez"]
license = "MIT"
repository = ""
default-run = "runmath"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-dialog = "2.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
